welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: identifier expected but integer literal found.
		return 7:00
                         ^alarmClock:11: error: identifier expected but integer literal found.
			return 10:00
                                  ^alarmClock:17: error: identifier expected but integer literal found.
				return 10:00
                                          ^